[package]
name = "trellis_m4"
version = "0.10.0"
authors = [
    "Tony Arcieri <bascule@gmail.com>",
    "Paul Sajna <sajattack@gmail.com>",
    "Wez Furlong <wez@wezfurlong.org>"
]
description = "Board Support crate for the Adafruit NeoTrellis M4 Express"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"

[package.metadata.docs.rs]
features = ["adxl343", "keypad-unproven"]

[dependencies]
bitbang-hal = "0.3"
accelerometer = "0.11.0"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.adxl343]
version = "0.8"
optional = true
features = ["i16x3"]

[dependencies.atsamd-hal]
version = "0.15"
default-features = false
features = ["use_rtt", "usb"]

[dependencies.usb-device]
version = "0.2"
#optional = true

[dependencies.keypad]
version = "0.1"
optional = true

[dev-dependencies]
panic-halt = "0.2"
panic-semihosting = "0.5"
smart-leds = "0.3"
cortex-m = "0.7"
usbd-serial = "0.1"

[dev-dependencies.ws2812-timer-delay]
version = "0.3"

[features]
# ask the HAL to enable atsamd51g support
default = ["rt", "atsamd-hal/samd51g", "usb", "adxl343"]
rt = ["cortex-m-rt", "atsamd-hal/samd51g-rt"]
unproven = ["atsamd-hal/unproven"]
keypad-unproven = ["keypad", "unproven"]
usb = []

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true

[profile.release]
lto = true
opt-level = "s"

# for cargo flash
[package.metadata]
chip = "ATSAMD51G19A"

[[example]]
name = "neopixel_accel"
required-features = ["adxl343"]

[[example]]
name = "neopixel_blink"

[[example]]
name = "neopixel_orientation"
required-features = ["adxl343"]

[[example]]
name = "neopixel_rainbow"

[[example]]
name = "usb_serial"

[[example]]
name = "neopixel_keypad"
required-features = ["keypad-unproven"]
